--- a/data_loader.ipynb
+++ b/data_loader.ipynb
@@ -9,7 +9,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from data_cleaner import overall_cleaner, lang_filter"
+    "from yhelper import overall_cleaner, lang_filter"
    ]
   },
   {
