--- a/neural.ipynb
+++ b/neural.ipynb
@@ -16,10 +16,10 @@
    "outputs": [],
    "source": [
     "review = \"\"\"My girlfriend and I went to Taco Del Toro in Lincoln Park the other day and we were very upset about how our trip panned out. \n",
-    "One, Lincoln Park is not our favorite neighborhood. It is way to stuffy and the people are all rich and white. Two, as common \n",
+    "One, Lincoln Park is not our favorite neighborhood. Two, as common \n",
     "Logan Square millineal vegetarians, we expected that Taco Del Toro would have vegetarian options, but they DID NOT! This is so \n",
-    "upsetting in the current year! Taco Del Toro needs to expand its menu for all types of customers and not just rich, \n",
-    "white Lincoln Park people who do not care about the ANIMALS. Will not be back! But overall it was a fine dining experience\"\"\""
+    "upsetting in the current year! Taco Del Toro needs to expand its menu for all types of customers and not just rich \n",
+    "Lincoln Park people who do not care about the ANIMALS. Will not be back! But overall it was a fine dining experience\"\"\""
    ]
   },
   {
