clean up and minor touches

--- a/neural.ipynb
+++ b/neural.ipynb
@@ -4,9 +4,28 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
-    "from yhelper import neural_modeling"
+    "import numpy as np\n",
+    "from tqdm import tqdm\n",
+    "from keras.preprocessing.text import Tokenizer\n",
+    "from keras.preprocessing.sequence import pad_sequences\n",
+    "from yhelper import neural_modeling, overall_cleaner\n",
+    "import pickle\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import pandas as pd\n",
+    "from keras.preprocessing import sequence, text\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Embedding, LSTM, Dense, GlobalMaxPool1D, Dropout, Bidirectional, Conv1D, Activation"
    ]
   },
   {
@@ -15,11 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "review = \"\"\"My girlfriend and I went to Taco Del Toro in Lincoln Park the other day and we were very upset about how our trip panned out. \n",
-    "One, Lincoln Park is not our favorite neighborhood. Two, as common \n",
-    "Logan Square millineal vegetarians, we expected that Taco Del Toro would have vegetarian options, but they DID NOT! This is so \n",
-    "upsetting in the current year! Taco Del Toro needs to expand its menu for all types of customers and not just rich \n",
-    "Lincoln Park people who do not care about the ANIMALS. Will not be back! But overall it was a fine dining experience\"\"\""
+    "review = \"\"\"This place has nice sweat potato fries and chicken but salad and other plates not really good. So, if you want to eat sweat potatoes fries and chicken you should go for it.\"\"\""
    ]
   },
   {
@@ -33,17 +48,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "arizona = neural_modeling('df_az.p')"
+    "arizona = neural_modeling('post_eda/eda_az.p')"
    ]
   },
   {
@@ -55,11 +62,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "WARNING:tensorflow:From /opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/tensorflow/python/util/deprecation.py:497: calling conv1d (from tensorflow.python.ops.nn_ops) with data_format=NHWC is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "`NHWC` for data_format is deprecated, use `NWC` instead\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_1 (Embedding)      (None, None, 150)         43752000  \n",
+      "embedding_1 (Embedding)      (None, None, 150)         18442500  \n",
       "_________________________________________________________________\n",
       "conv1d_1 (Conv1D)            (None, None, 64)          48064     \n",
       "_________________________________________________________________\n",
@@ -71,8 +80,8 @@
       "_________________________________________________________________\n",
       "dense_1 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
-      "Total params: 43,866,757\n",
-      "Trainable params: 43,866,757\n",
+      "Total params: 18,557,257\n",
+      "Trainable params: 18,557,257\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -80,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7f0ae44dac18>"
+       "<keras.engine.sequential.Sequential at 0x7fb2a9234e80>"
       ]
      },
      "execution_count": 4,
@@ -94,70 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_4\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "embedding_4 (Embedding)      (None, None, 150)         43752000  \n",
+      "embedding_2 (Embedding)      (None, None, 150)         18442500  \n",
       "_________________________________________________________________\n",
-      "conv1d_4 (Conv1D)            (None, None, 64)          48064     \n",
+      "conv1d_2 (Conv1D)            (None, None, 64)          48064     \n",
       "_________________________________________________________________\n",
-      "bidirectional_4 (Bidirection (None, None, 128)         66048     \n",
+      "bidirectional_2 (Bidirection (None, None, 128)         66048     \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, None, 128)         0         \n",
+      "dropout_2 (Dropout)          (None, None, 128)         0         \n",
       "_________________________________________________________________\n",
-      "global_max_pooling1d_4 (Glob (None, 128)               0         \n",
+      "global_max_pooling1d_2 (Glob (None, 128)               0         \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 5)                 645       \n",
+      "dense_2 (Dense)              (None, 5)                 645       \n",
       "=================================================================\n",
-      "Total params: 43,866,757\n",
-      "Trainable params: 43,866,757\n",
+      "Total params: 18,557,257\n",
+      "Trainable params: 18,557,257\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.5/dist-packages/tensorflow_core/python/framework/indexed_slices.py:433: UserWarning: Converting sparse IndexedSlices to a dense Tensor of unknown shape. This may consume a large amount of memory.\n",
-      "  \"Converting sparse IndexedSlices to a dense Tensor of unknown shape. \"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "_________________________________________________________________\n",
       "Train on 68360 samples, validate on 7596 samples\n",
-      "Epoch 1/5\n",
-      "68360/68360 [==============================] - 167s 2ms/step - loss: 0.8343 - accuracy: 0.6634 - mse: 0.0891 - val_loss: 0.8252 - val_accuracy: 0.7029 - val_mse: 0.0871\n",
-      "Epoch 2/5\n",
-      "68360/68360 [==============================] - 169s 2ms/step - loss: 0.6287 - accuracy: 0.7425 - mse: 0.0700 - val_loss: 0.7666 - val_accuracy: 0.6919 - val_mse: 0.0821\n",
-      "Epoch 3/5\n",
-      "68360/68360 [==============================] - 169s 2ms/step - loss: 0.5213 - accuracy: 0.7894 - mse: 0.0588 - val_loss: 0.7662 - val_accuracy: 0.6950 - val_mse: 0.0829\n",
-      "Epoch 4/5\n",
-      "68360/68360 [==============================] - 167s 2ms/step - loss: 0.4195 - accuracy: 0.8341 - mse: 0.0472 - val_loss: 0.7742 - val_accuracy: 0.6887 - val_mse: 0.0839\n",
-      "Epoch 5/5\n",
-      "68360/68360 [==============================] - 168s 2ms/step - loss: 0.3207 - accuracy: 0.8781 - mse: 0.0357 - val_loss: 0.8288 - val_accuracy: 0.6631 - val_mse: 0.0887\n",
+      "Epoch 1/2\n",
+      "68360/68360 [==============================] - 139s 2ms/step - loss: 1.4067 - acc: 0.4714 - mean_squared_error: 0.1404 - val_loss: 1.3663 - val_acc: 0.5004 - val_mean_squared_error: 0.1375\n",
+      "Epoch 2/2\n",
+      "68360/68360 [==============================] - 135s 2ms/step - loss: 1.2182 - acc: 0.5102 - mean_squared_error: 0.1219 - val_loss: 1.1673 - val_acc: 0.6003 - val_mean_squared_error: 0.1169\n",
       "-------Accuracy------- \n",
       "\n",
-      "18990/18990 [==============================] - 25s 1ms/step\n",
-      "[0.8014965281730078, 0.6719852685928345, 0.08684461563825607]\n",
-      "['loss', 'accuracy', 'mse']\n"
+      "18990/18990 [==============================] - 16s 830us/step\n",
+      "[1.1756359240706185, 0.5938388625623805, 0.11768171106940385]\n",
+      "['loss', 'acc', 'mean_squared_error']\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.5/dist-packages/keras/engine/sequential.py:111: UserWarning: `Sequential.model` is deprecated. `Sequential` is a subclass of `Model`, you can just use your `Sequential` instance directly.\n",
+      "/opt/anaconda3/envs/learn-env/lib/python3.6/site-packages/keras/engine/sequential.py:110: UserWarning: `Sequential.model` is deprecated. `Sequential` is a subclass of `Model`, you can just use your `Sequential` instance directly.\n",
       "  warnings.warn('`Sequential.model` is deprecated. '\n"
      ]
     },
@@ -165,12 +153,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "That review looks like 0 star(s)!\n"
+      "That review looks like 4 star(s)!\n"
      ]
     }
    ],
    "source": [
-    "arizona.fit_evaluate(n_epoch=5,review_sample=review,save=True)"
+    "arizona.fit_evaluate(n_epoch=2,review_sample=review,save=False)"
    ]
   },
   {
@@ -876,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
